# cpu-mlp

./: CMakeLists.txt  README.md  default.nix  flake.nix  makefile  notes.txt  run.sh
src/: main.c  mlp_cpu.cpp  mlp_cuda_basic.cu  mlp_cudnn.cu  mlp_cudnn_iso.cu  mnist.h  mnist.hpp
